--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#FFFFFFFF</color>
+    <color name="twitter_blue">#1DA1F2</color>
+    <color name="A50">#e1f1fc</color>
+    <color name="A100">#b7dbf9</color>
+    <color name="A200">#89c4f5</color>
+    <color name="A300">#5aacf0</color>
+    <color name="A400">#329cee</color>
+    <color name="A500">#2b8fe0</color>
+    <color name="A600">#237ece</color>
+    <color name="A700">#1c6cbc</color>
+    <color name="A800">#10509d</color>
 </resources>
