--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".StartupActivity">
 
+
     <ImageView
-        android:id="@+id/startup_background_logo"
+        android:id="@+id/background_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="204dp"
+        android:layout_marginEnd="@dimen/twitter_logo_marginEnd"
+        android:layout_marginBottom="@dimen/twitter_logo_marginBottom"
         android:foregroundGravity="center"
         android:scaleX="0.5"
         android:scaleY="0.5"
@@ -21,32 +22,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo" />
 
-    <LinearLayout
-        android:id="@+id/startup_choice"
-        android:layout_width="fill_parent"
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
-        android:gravity="center"
-        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/startup_background_logo"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <android.widget.Button
-            style="@style/startup_button"
-            android:drawableStart="@drawable/sign_in_icon"
-            android:text="@string/sign_in_button"
-            android:background="@drawable/startup_button"/>
-
-        <android.widget.Button
-            style="@style/startup_button"
-            android:drawableStart="@drawable/sign_up_icon"
-            android:text="@string/sign_up_button"
-            android:background="@drawable/startup_button" />
-
-    </LinearLayout>
-
+        app:layout_constraintEnd_toStartOf="@+id/background_logo"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
