--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="twitter_logo_marginEnd">32dp</dimen>
+    <dimen name="twitter_logo_marginBottom">280dp</dimen>
+
     <dimen name="button_icon_height">32dp</dimen>
     <dimen name="button_icon_width">32dp</dimen>
     <dimen name="button_icon_padding">12dp</dimen>
+    <dimen name="button_width">250dp</dimen>
+
+    <dimen name="button_padding_top">16dp</dimen>
+    <dimen name="button_padding_bottom">12dp</dimen>
+    <dimen name="button_padding_end">32dp</dimen>
+    <dimen name="button_padding_start">32dp</dimen>
+
+    <dimen name="text_field_corner_radius_top_start">12dp</dimen>
+    <dimen name="text_field_corner_radius_top_end">12dp</dimen>
+    <dimen name="text_field_corner_radius_bottom_start">12dp</dimen>
+    <dimen name="text_field_corner_radius_bottom_end">12dp</dimen>
+
+    <dimen name="button_textSize">20sp</dimen>
+    <dimen name="hint_textSize">30</dimen>
 
 </resources>
