--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginTop="200dp"
-        >
+        android:layout_marginTop="180dp">
+
 
         <TextView
             android:text="@string/sign_up_page"
@@ -48,16 +48,29 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etSignUpPasswordLayout"
-            app:passwordToggleEnabled="true"
+            android:id="@+id/etSignUpUsernameLayout"
             android:layout_marginBottom="@dimen/button_padding_bottom"
             style="@style/text_box">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etSignUpPassword"
-                android:hint="@string/password_field_hint"
-                android:inputType="textPassword"
+                android:id="@+id/etSignUpUsername"
+                android:hint="@string/username_field_hint"
+                android:inputType="textVisiblePassword|textNoSuggestions"
                 style="@style/text_field"
                 />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etSignUpPasswordLayout"
+            android:layout_marginBottom="@dimen/button_padding_bottom"
+            app:passwordToggleEnabled="true"
+            style="@style/text_box">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etSignUpPassword"
+                    android:hint="@string/password_field_hint"
+                    android:inputType="textPassword"
+                    style="@style/text_field"
+                    />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -66,49 +79,52 @@
             app:passwordToggleEnabled="false"
             style="@style/text_box">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etPasswordRepeat"
+                android:id="@+id/etSignUpPasswordRepeat"
                 android:hint="@string/repeat_password_field_hint"
                 android:inputType="textPassword"
                 style="@style/text_field"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/button_padding_bottom"
+        android:orientation="horizontal"
         style="@style/text_view">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/date_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="start|center_vertical"
+                android:drawableEnd="@drawable/pick_date"
+                android:layout_marginEnd="35dp"
+                android:drawablePadding="15dp"
+                android:text="@string/pick_date_button"
+                android:textColor="@color/black"
+                android:background="@drawable/pick_calendar_button"
+                android:clickable="true" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/date_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/pick_date"
-            android:gravity="start|center_vertical"
-            android:text="@string/pick_date_button"
-            android:textColor="@color/black"
-            android:drawablePadding="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/pick_calendar_button"
-            />
+            <Spinner
+                android:id="@+id/spinnerCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
 
-        <Spinner
-            android:id="@+id/spinnerCountry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+                android:entries="@array/country_array"
+                android:spinnerMode="dropdown" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
         <android.widget.Button
+            android:id="@+id/sign_up_complete"
             style="@style/startup_button"
-            android:text="@string/next_button"
+            android:text="@string/sign_up_complete_button"
             android:background="@drawable/startup_button"/>
 
-
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/sign_up_successful"
+            android:text="@string/sign_in_success"
+            style="@style/success_text" />
     </LinearLayout>
 </FrameLayout>
