--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,11 +2,14 @@
 <resources>
     <dimen name="twitter_logo_marginEnd">32dp</dimen>
     <dimen name="twitter_logo_marginBottom">280dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
 
     <dimen name="button_icon_height">32dp</dimen>
     <dimen name="button_icon_width">32dp</dimen>
     <dimen name="button_icon_padding">12dp</dimen>
     <dimen name="button_width">250dp</dimen>
+    <dimen name="spinner_max_width">150dp</dimen>
+    <dimen name="tab_height">54dp</dimen>
 
     <dimen name="button_padding_top">16dp</dimen>
     <dimen name="button_padding_bottom">12dp</dimen>
