--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,7 +2,13 @@
 <resources>
     <dimen name="twitter_logo_marginEnd">32dp</dimen>
     <dimen name="twitter_logo_marginBottom">280dp</dimen>
-    <dimen name="default_margin">16dp</dimen>
+    <dimen name="margin_xxl">48dp</dimen>
+    <dimen name="margin_xl">36dp</dimen>
+    <dimen name="margin_l">24dp</dimen>
+    <dimen name="margin_m">16dp</dimen>
+    <dimen name="margin_s">8dp</dimen>
+    <dimen name="profile_picture_stroke">3dp</dimen>
+
 
     <dimen name="button_icon_height">32dp</dimen>
     <dimen name="button_icon_width">32dp</dimen>
@@ -10,6 +16,10 @@
     <dimen name="button_width">250dp</dimen>
     <dimen name="spinner_max_width">150dp</dimen>
     <dimen name="tab_height">54dp</dimen>
+    <dimen name="profile_picture_height">48dp</dimen>
+    <dimen name="profile_picture_width">48dp</dimen>
+    <dimen name="small_profile_picture_height">32dp</dimen>
+    <dimen name="small_profile_picture_width">32dp</dimen>
 
     <dimen name="button_padding_top">16dp</dimen>
     <dimen name="button_padding_bottom">12dp</dimen>
@@ -23,10 +33,14 @@
 
     <dimen name="button_textSize">20sp</dimen>
     <dimen name="hint_textSize">30</dimen>
+    <dimen name="tweet_textSize">14sp</dimen>
+    <dimen name="quoted_tweet_textSizes">12sp</dimen>
 
     <dimen name="linear_layout_margin_top">200dp</dimen>
     <dimen name="view_title_size_big">20sp</dimen>
     <dimen name="view_title_size_medium">18sp</dimen>
     <dimen name="view_title_size_small">16sp</dimen>
+
+    <integer name="quote_max_lines">3</integer>
 
 </resources>
