--- a/app/src/main/res/layout/activity_base_writing.xml
+++ b/app/src/main/res/layout/activity_base_writing.xml
@@ -42,6 +42,7 @@
         android:layout_below="@id/tweet_page_header"/>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etTweetLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tweet_page_header"
