--- a/app/src/main/res/layout/activity_default.xml
+++ b/app/src/main/res/layout/activity_default.xml
@@ -4,13 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DefaultActivity">
+    tools:context=".DefaultActivity"
+    android:clipToPadding="false"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/home_page_header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tab_height"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:background="@color/white"
+        android:elevation="@dimen/margin_m"
+        >
 
         <ImageView
             android:layout_width="wrap_content"
@@ -24,7 +29,7 @@
     <include layout="@layout/vertical_line_break"
         android:layout_height="1dp"
         android:layout_width="match_parent"
-        android:layout_below="@id/home_page_header" />
+        android:layout_below="@id/home_page_header"/>
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -57,6 +62,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_margin="@dimen/margin_m"
+                app:elevation="@dimen/margin_m"
                 android:src="@drawable/write"
                 app:backgroundTint="@color/twitter_blue"
                 app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
@@ -76,8 +82,7 @@
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"
         app:tabIconTint="@color/color_selector"
-        app:tabIndicatorColor="@color/color_selector"
-        >
+        app:tabIndicatorColor="@color/color_selector">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/home_item"
