--- a/app/src/main/res/layout/mention_item_layout.xml
+++ b/app/src/main/res/layout/mention_item_layout.xml
@@ -7,9 +7,7 @@
     <include layout="@layout/tweet_item_layout"
         android:id="@+id/mentioned_item"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        />
+        android:layout_height="wrap_content" />
     <include layout="@layout/tweet_item_layout"
         android:id="@+id/mention_item" />
 
