--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -117,7 +117,7 @@
 
         <android.widget.Button
             android:id="@+id/sign_up_complete"
-            style="@style/startup_button"
+            style="@style/default_button_style"
             android:text="@string/sign_up_complete_button" />
 
         <com.google.android.material.textview.MaterialTextView
