--- a/app/src/main/res/layout/tweet_item_layout.xml
+++ b/app/src/main/res/layout/tweet_item_layout.xml
@@ -21,7 +21,7 @@
             android:maxWidth="@dimen/profile_picture_width"
             android:layout_marginStart="@dimen/margin_m"
             android:layout_marginTop="@dimen/margin_m"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/profile_placeholder"
             app:strokeWidth="@dimen/profile_picture_stroke"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/segoe"
-                    android:text="\@Elon_Musk"
+                    android:text="@string/tweet_sender_username_field"
                     android:textColor="@color/color_light_gray"/>
 
             </LinearLayout>
@@ -72,6 +72,7 @@
                 android:id="@+id/tweet_attachments"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 android:paddingTop="@dimen/margin_m"
                 android:paddingBottom="@dimen/margin_m"
