--- a/app/src/main/res/layout/tweet_item_layout.xml
+++ b/app/src/main/res/layout/tweet_item_layout.xml
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/segoe"
-                    android:text="@string/tweet_sender_username_field"
+                    android:text="@string/username_field"
                     android:textColor="@color/color_light_gray"/>
 
             </LinearLayout>
